//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxSwap {
  TxBase           TxBase = 1;
  bytes TokenTxidOut = 2;
  bytes    TokenTxidIn = 3;
  bytes AmountOut = 4;
  bytes   AmountIn = 5;
  uint64 LockhightPromoter = 6;
  bytes PukPromoter = 7;
  bytes    SignPromoter = 8;
  bytes AmountDeal = 9;
  repeated Vin TokenVinRecv = 10;
  repeated Vout TokenVoutRecv = 11;
}

